--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main">
         <div class="back">
-            <img src="IMG_7567.JPG" alt="image1">
+            <img src="IMG_7566.webp" alt="image1">
         </div>
         <div class="top">
             <div id="workingarea">
