--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="workingarea">
                 <div id="nav">
                     <div id="lnav">
-                        <img src="raybanlogo.png" alt="raybanlogo">
+                        <img src="raybanlogo.webp" alt="raybanlogo">
                         <a href="#">PRODUCT</a>
                         <a href="">ABOUT</a>
                     </div>
